# apps/api/gen/models/update_absence_request.go
@@ -1,0 +1,117 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UpdateAbsenceRequest update absence request
+//
+// swagger:model UpdateAbsenceRequest
+type UpdateAbsenceRequest struct {
+
+	// duration
+	Duration float64 `json:"duration,omitempty"`
+
+	// notes
+	Notes string `json:"notes,omitempty"`
+
+	// status
+	// Enum: ["pending","approved","rejected","cancelled"]
+	Status string `json:"status,omitempty"`
+}
+
+// Validate validates this update absence request
+func (m *UpdateAbsenceRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateStatus(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+var updateAbsenceRequestTypeStatusPropEnum []any
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["pending","approved","rejected","cancelled"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		updateAbsenceRequestTypeStatusPropEnum = append(updateAbsenceRequestTypeStatusPropEnum, v)
+	}
+}
+
+const (
+
+	// UpdateAbsenceRequestStatusPending captures enum value "pending"
+	UpdateAbsenceRequestStatusPending string = "pending"
+
+	// UpdateAbsenceRequestStatusApproved captures enum value "approved"
+	UpdateAbsenceRequestStatusApproved string = "approved"
+
+	// UpdateAbsenceRequestStatusRejected captures enum value "rejected"
+	UpdateAbsenceRequestStatusRejected string = "rejected"
+
+	// UpdateAbsenceRequestStatusCancelled captures enum value "cancelled"
+	UpdateAbsenceRequestStatusCancelled string = "cancelled"
+)
+
+// prop value enum
+func (m *UpdateAbsenceRequest) validateStatusEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, updateAbsenceRequestTypeStatusPropEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *UpdateAbsenceRequest) validateStatus(formats strfmt.Registry) error {
+	if swag.IsZero(m.Status) { // not required
+		return nil
+	}
+
+	// value enum
+	if err := m.validateStatusEnum("status", "body", m.Status); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this update absence request based on context it is used
+func (m *UpdateAbsenceRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateAbsenceRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateAbsenceRequest) UnmarshalBinary(b []byte) error {
+	var res UpdateAbsenceRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
